add a simple pyspark app to ingest cdc from kafka to delta table

--- a/delta.ipynb
+++ b/delta.ipynb
@@ -2,27 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: JAVA_HOME=/home/tmpdeatheye/.sdkman/candidates/java/current\n"
+     ]
+    }
+   ],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import *\n",
-    "from delta import *\n",
-    "from delta.tables import *"
-   ]
+    "%env JAVA_HOME=/home/tmpdeatheye/.sdkman/candidates/java/current"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T00:33:26.364465Z",
+     "start_time": "2024-03-27T00:33:26.360480Z"
+    }
+   },
+   "id": "3b55bc0d132255f1",
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from delta import *\n",
+    "from delta.tables import *"
+   ],
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T00:33:27.486524Z",
+     "start_time": "2024-03-27T00:33:27.280963Z"
+    }
+   },
+   "id": "initial_id",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "13a03173c80738eb",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T00:33:46.470977Z",
+     "start_time": "2024-03-27T00:33:28.148703Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/03/27 07:33:29 WARN Utils: Your hostname, ubuntu resolves to a loopback address: 127.0.1.1; using 192.168.2.8 instead (on interface wlp0s20f3)\n",
+      "24/03/27 07:33:29 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":: loading settings :: url = jar:file:/opt/miniconda3/envs/venv/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/tmpdeatheye/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/tmpdeatheye/.ivy2/jars\n",
+      "io.delta#delta-spark_2.12 added as a dependency\n",
+      "org.apache.spark#spark-avro_2.12 added as a dependency\n",
+      "org.apache.hadoop#hadoop-aws added as a dependency\n",
+      "io.delta#delta-spark_2.12 added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-84d358c3-fd5b-4ffe-b170-4c0ea981a522;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound io.delta#delta-spark_2.12;3.1.0 in central\n",
+      "\tfound io.delta#delta-storage;3.1.0 in central\n",
+      "\tfound org.antlr#antlr4-runtime;4.9.3 in local-m2-cache\n",
+      "\tfound org.apache.spark#spark-avro_2.12;3.5.1 in central\n",
+      "\tfound org.tukaani#xz;1.9 in spark-list\n",
+      "\tfound org.apache.hadoop#hadoop-aws;3.3.4 in local-m2-cache\n",
+      "\tfound com.amazonaws#aws-java-sdk-bundle;1.12.262 in central\n",
+      "\tfound org.wildfly.openssl#wildfly-openssl;1.0.7.Final in local-m2-cache\n",
+      ":: resolution report :: resolve 182ms :: artifacts dl 5ms\n",
+      "\t:: modules in use:\n",
+      "\tcom.amazonaws#aws-java-sdk-bundle;1.12.262 from central in [default]\n",
+      "\tio.delta#delta-spark_2.12;3.1.0 from central in [default]\n",
+      "\tio.delta#delta-storage;3.1.0 from central in [default]\n",
+      "\torg.antlr#antlr4-runtime;4.9.3 from local-m2-cache in [default]\n",
+      "\torg.apache.hadoop#hadoop-aws;3.3.4 from local-m2-cache in [default]\n",
+      "\torg.apache.spark#spark-avro_2.12;3.5.1 from central in [default]\n",
+      "\torg.tukaani#xz;1.9 from spark-list in [default]\n",
+      "\torg.wildfly.openssl#wildfly-openssl;1.0.7.Final from local-m2-cache in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   8   |   0   |   0   |   0   ||   8   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-84d358c3-fd5b-4ffe-b170-4c0ea981a522\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 8 already retrieved (0kB/5ms)\n",
+      "24/03/27 07:33:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "conf = {\n",
     "    \"spark.hadoop.fs.s3a.impl\": \"org.apache.hadoop.fs.s3a.S3AFileSystem\",\n",
@@ -52,71 +142,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c6fb7a29904f1fb3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-26T17:18:57.232921Z",
+     "start_time": "2024-03-26T17:18:55.585291Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "DataFrame[]"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spark.sql(\"\"\"\n",
-    "    CREATE SCHEMA vnshop LOCATION 's3a://lakehouse/silver/vnshop/'\n",
+    "    CREATE SCHEMA billing LOCATION 's3a://lakehouse/bronze/billing/'\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb4715969b70b1d3",
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/03/27 00:18:57 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-s3a-file-system.properties,hadoop-metrics2.properties\n",
+      "24/03/27 00:19:01 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider delta. Persisting data source table `spark_catalog`.`billing`.`invoice` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n",
+      "24/03/27 00:19:01 WARN SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "DataFrame[]"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spark.sql(\"\"\"\n",
-    "    CREATE TABLE vnshop.fact_order_created (\n",
-    "        id INT,\n",
-    "        name STRING,\n",
-    "        date STRING\n",
+    "    CREATE TABLE billing.invoice (\n",
+    "        order_id BIGINT,\n",
+    "        created_at TIMESTAMP,\n",
+    "        description STRING,\n",
+    "        date DATE\n",
     "    )\n",
     "    USING DELTA\n",
     "    PARTITIONED BY (date)\n",
-    "    LOCATION 's3a://lakehouse/silver/vnshop/main/fact/order_created/'\n",
+    "    LOCATION 's3a://lakehouse/bronze/billing/main/raw/invoice/'\n",
     "\"\"\")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-26T17:19:01.912238Z",
+     "start_time": "2024-03-26T17:18:57.233723Z"
+    }
+   },
+   "id": "cb4715969b70b1d3",
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f9286fd711880fc",
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-------------------+-----------+----------+\n",
+      "|order_id|created_at         |description|date      |\n",
+      "+--------+-------------------+-----------+----------+\n",
+      "|2       |2024-03-27 00:28:06|two-two    |2024-03-26|\n",
+      "+--------+-------------------+-----------+----------+\n"
+     ]
+    }
+   ],
    "source": [
     "spark.sql(\"\"\"\n",
-    "    INSERT INTO vnshop.fact_order_created\n",
-    "    VALUES (1, 'a', '2022-01-01'), \n",
-    "           (2, 'B', '2022-01-01'),\n",
-    "           (3, 'C', '2022-01-02'), \n",
-    "           (4, 'D', '2022-01-03'),\n",
-    "           (5, 'E', '2022-01-03')\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "714c4dcc7cd29f09",
+    "    SELECT * FROM billing.invoice\n",
+    "\"\"\").show(truncate=False)"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-26T17:29:24.235098Z",
+     "start_time": "2024-03-26T17:29:23.645278Z"
+    }
    },
-   "outputs": [],
-   "source": [
-    "spark.sql(\"\"\"\n",
-    "    UPDATE vnshop.fact_order_created SET name = 'A' WHERE name = 'a'; \n",
-    "\"\"\")"
-   ]
+   "id": "cb0d54bbbfb4fd42",
+   "execution_count": 12
   }
  ],
  "metadata": {
